# velix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  integration_kernel.cpp
chat/: build_chat.sh  gateway.py  handler.cpp  telegram.cpp  terminal.cpp  terminal.py
chat/terminal/: __init__.py  __main__.py  display.py  main.py  session_picker.py  spinner.py  style.py  terminal.py  terminal_gateway.py
communication/: json_include.hpp  json_validate.hpp  network_config.hpp  recv.cpp  send.cpp  socket_wrapper.hpp
config/: application_manager.json  compacter.json  config.json  executioner.json  handler.json  model.json  ports.json  storage.json  supervisor.json  terminal.json
core/: bus.cpp  bus.hpp  executioner.cpp  handler.cpp  process_registry.cpp  process_registry.hpp  supervisor.cpp  supervisor.hpp  termination_engine.cpp  termination_engine.hpp  velix_process.cpp  velix_process.hpp
core/persistant_applications/: application_manager.cpp  application_manager.hpp  terminal_driver.cpp  terminal_driver.hpp  terminal_registry.cpp  terminal_registry.hpp
docs/: APPROVAL_SYSTEM.md  SETUP_LLM.md  STORAGE.md  TERMINAL.md
execution/: executioner.cpp  executioner.hpp  prepare_runner.cpp  prepare_runner.hpp  run_launcher.cpp  run_launcher.hpp
execution/runtime_adapters/: runtime_adapters.cpp  runtime_adapters.hpp
llm/: compacter.cpp  compacter.hpp  context_manager.cpp  conversation_manager.cpp  conversation_manager.hpp  scheduler.cpp  scheduler.hpp  session_io.cpp  session_io.hpp  session_manager.cpp  session_manager.hpp
llm/adapters/: anthropic.hpp  factory.hpp  llama_cpp.hpp  ollama.hpp  openai_compatible.hpp  provider.hpp
llm/skills/: skill_registry.cpp  skill_registry.hpp
llm/storage/: istorage_provider.hpp  json_storage_provider.cpp  json_storage_provider.hpp  provider_factory.cpp  provider_factory.hpp  sqlite_storage_provider.cpp  sqlite_storage_provider.hpp
llm/tools/: registry.cpp  registry.hpp
memory/: general_guidelines.md  history.json  soul.md  user.md
runtime/: README.md
runtime/sdk/cpp/: README.md  velix_process.cpp  velix_process.hpp
runtime/sdk/go/: velix_process.go
runtime/sdk/node/: velix_process.js
runtime/sdk/python/: README.md  velix_process.py
runtime/sdk/rust/: velix_process.rs
schema/: conversation.json  execution_manifest.json  handler_notifications.json  ipc_message.json  llm_request.json  manifest_template.json  tool_manifest.json  tool_result.json
skills/commandline/: main.cpp  manifest.json
skills/git-expert/: SKILL.md
skills/python-optimizer/: SKILL.md
skills/session_search/: manifest.json  search.py
skills/stress_test_executor/: CMakeLists.txt  main.cpp  manifest.json
skills/terminal/: CMakeLists.txt  main.cpp  manifest.json
skills/terminal/agent_playground/repo/: momo.md
skills/update_memory/: manifest.json  update.py
skills/web-researcher/: SKILL.md
skills/web_search/: main.py  manifest.json  pyproject.toml
tools/file_patch/: CMakeLists.txt  main.cpp  manifest.json
tools/file_read/: CMakeLists.txt  main.cpp  manifest.json
tools/file_write/: CMakeLists.txt  main.cpp  manifest.json
tools/session_search/: manifest.json  search.py
tools/skill_view/: CMakeLists.txt  main.cpp  manifest.json
tools/stress_test_executor/: main.cpp  manifest.json
tools/terminal/: main.cpp  main_old.cpp  manifest.json
tools/update_memory/: manifest.json  update.py
tools/web_search/: main.py  manifest.json
utils/: config_utils.hpp  file_lock.hpp  file_tools.cpp  file_tools.hpp  logger.hpp  process_spawner.hpp  string_utils.hpp  thread_pool.hpp  timer.hpp
